--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,43 +1,50 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
 @custom-variant dark (&:is(.dark *));
 @tailwind utilities;
 
+/*
+--bg-color: #d8ddef;
+  --accent-color: #c8a2c8;
+  --secondary-accent: #6b8e23;
+  --text-color: #5a5a5a;
+  --contrast-color: #faf3e0;
+*/
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Playfair Display";
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  background-color: var(--bg-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --bg-color: #d8ddef;
-  --accent-color: #c8a2c8;
-  --secondary-accent: #6b8e23;
-  --text-color: #5a5a5a;
-  --contrast-color: #faf3e0;
+  --primary-font: "Lora";
+  --secondary-font: "Playfair Display";
+  --background: #e8ded1;
+  --primary: #a24c4a;
+  --accent: #6b8e62;
+  --secondary: #f3e9dc;
+  --text: #7b5e57;
+  --contrast: #7b5e57;
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
+  --card: oklch(43.607% 0.00658 16.996);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
+  --border: oklch(73.481% 0.00008 271.152);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -57,8 +64,7 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block;
   min-width: 320px;
   min-height: 100vh;
 }
